--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "server"
   ],
   "scripts": {
-    "dev": "concurrently \"npm --workspace server run start\" \"npm --workspace app run dev\"",
-    "dev:app": "npm --workspace app run dev",
-    "build:app": "npm --workspace app run build",
-    "start:app": "npm --workspace app run start",
-    "start:server": "npm --workspace server run start",
+    "dev": "concurrently \"npm --prefix server run start\" \"npm --prefix app run dev\"",
+    "dev:app": "npm --prefix app run dev",
+    "build:app": "npm --prefix app run build",
+    "start:app": "npm --prefix app run start",
+    "start:server": "npm --prefix server run start",
     "install:all": "npm install --workspaces"
   },
   "devDependencies": {
