Add OpenAI real try-on with demo fallback

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# Placeholder for future AI integration
+# Required for real try-on (place in server/.env or .env at repo root)
 OPENAI_API_KEY=your-api-key-here
