--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "cors": "2.8.5",
+    "dotenv": "^17.2.3",
     "express": "4.19.2",
     "multer": "1.4.5-lts.1",
+    "openai": "^6.15.0",
     "sharp": "^0.34.5"
   }
 }
