--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "canaanite-dress-tryon-server",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
